--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">cMedicine</string>
+    <string name="enter_testing">点击右侧按钮进入测试</string>
+    <string name="test">测试</string>
 </resources>
