--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="permission_camera_dialog_msg_scanner">请允许我开启摄影头,使我能够扫描二维码.</string>
     <string name="permission_camera_denied_msg">授权失败,摄像头无法打开</string>
     <string name="permission_camera_never_ask_again">你已禁止获取摄像机权限,需要在设置中开启摄像机权限</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
